# claude-box

./: .gitignore  ADR-CAPABILITY-TRANSPORT.md  ADR-DISPATCH-APPROVAL-GATES.md  ADR-DISPATCH-PATH-NAMESPACES.md  ADR-DISPATCH-PLANNING-FROM-TICKET.md  ADR-DISPATCH-REPO-ACCESS.md  ADR-NETWORK-POSTURE.md  ADR-ORCHESTRATION.md  ADR-POD-ORCHESTRATION.md  ADR-RC-EGRESS-SNI.md  ADR.md  AUTHD.md  BUILD.md  CAPABILITIES.md  CHANGELOG.md  CHECK-CAVEATS.md  CLAUDE.md  CONCIERGE.md  CONTRIBUTING.md  CREDENTIALS.md  DECOMPOSITION.md  DOGFOOD.md  DOORS.md  GHAPPD.md  GITAI-PROVENANCE.md  HANDOFF.md  HOSTING.md  KEEPERD.md  LAUNCHERD.md  NETD.md  OCAP.md  ORCHESTRATION.md  PATHBASED.md  POD.md  PRX-DAEMON-HANDOFF.md  README.md  RELEASING.md  REPOD.md  ROADMAP.md  ROOM.md  (+21 more)
.changeset/: README.md  ghcr-publishing.md
.claude/: settings.local.json
content/: strings.json
contract/: CHAIN.md  INVARIANTS.md  README.md  capabilities.contract.json  capabilities.v0.1.schema.json
drafts/: SESSION-HANDOFF.md
guest-room/: HANDOFF.md  README.md  guest-room.test.ts  hotel-safe.ts  mod.ts  room-service.ts
launcherd-rs/: Cargo.toml
launcherd-rs/src/: dispatch.rs  doors.rs  id.rs  lib.rs  limits.rs  main.rs  path.rs  protocol.rs  rooms.rs  serve.rs  spawn.rs
lib/: box-keys.ts  concierge.ts  keeper.ts  remote-control-flags.ts  scout.ts  spawn.ts
netd/: README.md  netd.ts  run-netd.sh
nixos/: doors.nix
quadlet/: README.md  authd.container  bastion-run.sh  beadsd.container  claude-doors.volume  claude-keys.volume  dolt.container  install.sh  keeperd.container  launcherd-rs.service  (+9 more)
(+80 files in other folders)
