[package]
name = "launcherd"
version = "0.1.0"
edition = "2021"
description = "launch + dispatch control-plane door for claude-box (Rust, VM-native static binary)"

# See ADR-DISPATCH-PATH-NAMESPACES.md for why this is Rust + VM-native:
# launcherd is the one door that controls the host container runtime, so it
# runs on the host (not in a sandbox that would hand the host back), and it
# ships as a static musl binary because the VM (Fedora CoreOS) has no JS
# runtime to run the previous bun implementation. The path-namespace contract
# (HostPath vs InBoxPath) is encoded as distinct types so a wrong-namespace
# bind-mount source is a compile error, not a runtime surprise.

[[bin]]
name = "launcherd"
path = "src/main.rs"

[lib]
name = "launcherd"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
